# xLungs3DExplorer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Includes/glad/include/glad/: glad.h
Libraries/: assimp-vc143-mtd.lib  glfw3.lib
LungTumorsVisualization/: LungTumorsVisualization.cpp  LungTumorsVisualization.vcxproj  LungTumorsVisualization.vcxproj.filters  imgui.ini  nodule_information.h  tumor_rotation.h
LungTumorsVisualization/camera/: LookAtCameraFactory.h  camera.h
LungTumorsVisualization/imgui/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
LungTumorsVisualization/models_utilities/: Material.h  Texture.h  Vertex.h
LungTumorsVisualization/models_utilities/Axes/: Axes.h
LungTumorsVisualization/models_utilities/Line/: Line.h
LungTumorsVisualization/models_utilities/Mesh/: Mesh.cpp  Mesh.h
LungTumorsVisualization/models_utilities/Model/: Model.cpp  Model.h
LungTumorsVisualization/models_utilities/Tumor/: Tumor.cpp  Tumor.h
LungTumorsVisualization/shaders/: Shader.h  ShaderType.h  line_shader.glsl  shader.glsl  shaders_utils.cpp  shaders_utils.h
LungTumorsVisualization/test_meshes/: 0a5e74_036783_0_aligned.stl  4bd8c2_395494_0_aligned.stl
LungTumorsVisualization/utilities/cli_options/: CLIReader.cpp  CLIReader.h
LungTumorsVisualization/utilities/csv/: CSVReader.cpp  CSVReader.h
LungTumorsVisualization/utilities/gl/: gl_utilities.cpp  gl_utilities.h
LungTumorsVisualization/utilities/glad/: glad_functions.cpp  glad_functions.h
LungTumorsVisualization/utilities/glfw/: glfw_callbacks.cpp  glfw_callbacks.h  glfw_utilities.cpp  glfw_utilities.h
LungTumorsVisualization/utilities/imgui/: imgui_utilites.cpp  imgui_utilities.h
LungTumorsVisualization/utilities/meshes_loader/: MeshesLoader.cpp  MeshesLoader.h
LungTumorsVisualization/utilities/report_error/: report_error.cpp  report_error.h
scripts/: prepare_and_build_mac.sh  prepare_and_build_win_terminal.ps1
